Fix bug - top-nav aligns with .right-links

--- a/css/style.scss
+++ b/css/style.scss
@@ -39,6 +39,7 @@ body {
   ul {
     list-style: none;
     align-items: center;
+    padding-right: 18px;
 
     li {
       font-weight: 400;
